# OPAQUE-POP-ARTEFACT

./: .gitignore  README.md  threatmodel.md
client/: client_demo.py
rust_opaque_rs/: Cargo.toml  pyproject.toml
rust_opaque_rs/src/: lib.rs
server/: app.py  pop.py
